--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,23 @@
-# Node modules
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Build directory
-build/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Environment variables
-.env
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Editor & OS files
-.DS_Store
-.vscode/
-.idea/
-*.swp
-*.swo
-*.swn
-
-# Log files
-logs/
-*.log
-npm-debug.log
-yarn-debug.log
-pnpm-debug.log
-lerna-debug.log
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Cache files
-.cache/
-dist/
-out/
-
-# Testing & coverage
-coverage/
-jest/
-cypress/screenshots/
-cypress/videos/
-
-# Misc
-*.bak
-*.tmp
-*.lock
-*.pid
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
