--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.14",
     "@types/react-dom": "^19.0.3",
     "@types/react-svg": "^3.0.0",
